--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "succinct-summer",
+  "name": "succinct-summer-api",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
   "dependencies": {
-    "https-proxy-agent": "^5.0.0",
-    "node-fetch": "^2.6.7"
+    "axios": "^1.7.2"
   }
 }
